bug fixes and complete api
